--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ Library/PackageCache/com.unity.burst@1.6.6/.Runtime/hostmac/dsymutil filter=lfs 
 Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
 Library/PackageCache/com.unity.burst@1.6.6/.Runtime/*.dylib filter=lfs diff=lfs merge=lfs -text
 Library/PackageCache/com.unity.collab-proxy@2.0.1/Lib/Editor/PlasticSCM/*.dylib filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.6.6/.Runtime/hostmac/lld filter=lfs diff=lfs merge=lfs -text
